[tool.poetry]
name = "Bot 360 new version"
version = "0.1.0"
description = "A starting point for build in a Discord bot in Python using the pycord library."
authors = ["Aepmong"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.1.0"
py-cord = "^2.4.0"
Flask = "^2.2.3"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
